--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.25)
 project(ConcorrenteTrabalho C)
-
-
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
+add_executable(ConcorrenteTrabalho RdxSortMPI.c main.c)
 find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
-add_library(ConcorrenteTrabalho main.c RadixSortSequencial.c RadixSortOpenMP.c RadixSortOpenMP.c)
+include_directories(/usr/include/x86_64-linux-gnu/mpich)
+add_library(main.c RadixSortSequencial.c RadixSortOpenMP.c RadixSortOpenMP.c teste.c RdxSortMPI.c RdxSortMPI.c RdxSortMPI.c)
