--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 project(ConcorrenteTrabalho C)
 set(CMAKE_CXX_STANDARD 14)
-add_executable(ConcorrenteTrabalho RdxSortMPI.c main.c)
+add_executable(ConcorrenteTrabalho RdxSortMPI.c RdxSortOpenMP.c main.c)
 find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -9,4 +9,4 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 include_directories(/usr/include/x86_64-linux-gnu/mpich)
-add_library(main.c RadixSortSequencial.c RadixSortOpenMP.c RadixSortOpenMP.c teste.c RdxSortMPI.c RdxSortMPI.c RdxSortMPI.c)
+add_library(RadixSortSequencial.c RdxSortMPI.c RdxSortMPI.c RdxSortMPI.c)
